# YOLOBOT

./: README.md
yolobot/src/yolobot_control/: CMakeLists.txt  package.xml
yolobot/src/yolobot_control/launch/: yolobot_control.launch
yolobot/src/yolobot_control/scripts/: robot_control.py
yolobot/src/yolobot_description/: CMakeLists.txt  package.xml  spawn_yolobot.py
yolobot/src/yolobot_description/launch/: spawn_yolobot.launch
yolobot/src/yolobot_description/robot/: yolobot.urdf
yolobot/src/yolobot_description/scripts/: spawn_yolobot.py
yolobot/src/yolobot_gazebo/: CMakeLists.txt  package.xml
yolobot/src/yolobot_gazebo/launch/: start_world_launch.launch  yolobot_launch.launch
yolobot/src/yolobot_recognition/: CMakeLists.txt  package.xml
yolobot/src/yolobot_recognition/scripts/: ros_recognition_yolo.py
