<?xml version="1.0"?>
<package format="2">
  <name>yolobot_control</name>
  <version>0.0.0</version>
  <description>ROS 1 package for controlling yolobot</description>

  <maintainer email="robotmania@todo.todo">robotmania</maintainer>
  <license>MIT</license>

  <!-- Dependencies for build -->
  <build_depend>catkin</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Dependencies for run -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Add teleop_twist_keyboard as a runtime dependency -->
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <export>
    <!-- Additional exports can be added here -->
  </export>
</package>

