<?xml version="1.0"?>
<package format="2">
  <name>yolobot_recognition</name>
  <version>0.0.0</version>
  <description>ROS 1 package for YOLO-based object recognition</description>

  <maintainer email="robotmania@todo.todo">robotmania</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>opencv</depend>

  <export>
  </export>
</package>

